force-app/main/default/objects/Property_Unit__c/Property_Unit__c.object-meta.xml
<CustomObject>
    <label>Property Unit</label>
    <nameField>
        <label>Property Unit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>