force-app/main/default/objects/Property_Unit__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <formula>3500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>