force-app/main/default/objects/Property_Unit__c/fields/Annual_Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Maintenance_Fee__c</fullName>
    <label>Annual Maintenance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>