force-app/main/default/objects/Property_Unit__c/fields/Balcony_Terrace_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Terrace_Sq_ft__c</fullName>
    <label>Balcony / Terrace Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>