force-app/main/default/objects/Property_Unit__c/fields/Blocked_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_End_Date__c</fullName>
    <label>Blocked End Date</label>
    <type>Date</type>
</CustomField>