force-app/main/default/objects/Property_Unit__c/fields/Blocked_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Start_Date__c</fullName>
    <label>Blocked Start Date</label>
    <type>Date</type>
</CustomField>