force-app/main/default/objects/Property_Unit__c/fields/Extra_Parking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extra_Parking_Fee__c</fullName>
    <label>Extra Parking Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>