force-app/main/default/objects/Property_Unit__c/fields/Facing_Direction__c.field-meta.xml
<CustomField>
    <fullName>Facing_Direction__c</fullName>
    <label>Facing Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>