force-app/main/default/objects/Property_Unit__c/fields/Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_End_Date__c</fullName>
    <label>Hold End Date</label>
    <type>Date</type>
</CustomField>