force-app/main/default/objects/Property_Unit__c/fields/Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Start_Date__c</fullName>
    <label>Hold Start Date</label>
    <type>Date</type>
</CustomField>