force-app/main/default/objects/Property_Unit__c/fields/Internal_Net_Salable_Area_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Internal_Net_Salable_Area_Sq_ft__c</fullName>
    <label>Internal Net Salable Area Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>