force-app/main/default/objects/Property_Unit__c/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>JV Unit</fullName>
            </value>
            <value>
                <fullName>Management Unit</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
                <isActive>false</isActive>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Under Construction</fullName>
                <isActive>false</isActive>
                <label>Under Construction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>