force-app/main/default/objects/Property_Unit__c/fields/Number_of_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parking_Spaces__c</fullName>
    <label>Number of Parking Spaces</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>