force-app/main/default/objects/Property_Unit__c/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>