force-app/main/default/objects/Property_Unit__c/fields/Price_Per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_SqFt__c</fullName>
    <formula>&quot;AED &quot; &amp; TEXT(ROUND(Original_Price__c / Total_Area_Sq_ft__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Price divided by Total Area (IA + BA) Sq.ft</inlineHelpText>
    <label>Price Per SqFt</label>
    <type>Text</type>
</CustomField>