force-app/main/default/objects/Property_Unit__c/fields/Project_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Handover_Date__c</fullName>
    <label>Project Handover Date</label>
    <type>Date</type>
</CustomField>