force-app/main/default/objects/Property_Unit__c/fields/Reserved_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserved_End_Date__c</fullName>
    <label>Reserved End Date</label>
    <type>Date</type>
</CustomField>