force-app/main/default/objects/Property_Unit__c/fields/Reserved_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Start_Date__c</fullName>
    <label>Reserved Start Date</label>
    <type>Date</type>
</CustomField>