force-app/main/default/objects/Property_Unit__c/fields/Total_Area_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Sq_ft__c</fullName>
    <formula>Internal_Net_Salable_Area_Sq_ft__c  +  Balcony_Terrace_Sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>