force-app/main/default/objects/Property_Unit__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName>
    <label>View Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aldar Heaven View</fullName>
            </value>
            <value>
                <fullName>Aldar Heaven View/Beach Pool View</fullName>
            </value>
            <value>
                <fullName>Beach Pool View</fullName>
            </value>
            <value>
                <fullName>Beach Pool View WIDER</fullName>
            </value>
            <value>
                <fullName>DLRC Community View</fullName>
            </value>
            <value>
                <fullName>DLRC Community View/Beach Pool View</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>