force-app/main/default/objects/Property_Unit__c/fields/X4_DLD__c.field-meta.xml
<CustomField>
    <fullName>X4_DLD__c</fullName>
    <formula>Original_Price__c  * 4 / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4% DLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>