force-app/main/default/objects/Property_Unit__c/validationRules/Blocked_End_Date_can_be_future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_End_Date_can_be_future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Blocked_End_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Blocked_End_Date__c</errorDisplayField>
    <errorMessage>Blocked End Date always be a Future Date</errorMessage>
</ValidationRule>