force-app/main/default/objects/Property_Unit__c/validationRules/Blocked_Start_Date_Cant_be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_Start_Date_Cant_be_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Blocked_Start_Date__c &lt;&gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Blocked_Start_Date__c</errorDisplayField>
    <errorMessage>Blocked Start Date must be today</errorMessage>
</ValidationRule>