force-app/main/default/objects/Property_Unit__c/validationRules/Hold_End_Date_Can_be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_End_Date_Can_be_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Hold_End_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Hold_End_Date__c</errorDisplayField>
    <errorMessage>Hold End Date always be a Future Date</errorMessage>
</ValidationRule>