force-app/main/default/objects/Property_Unit__c/validationRules/Hold_Start_Date_cant_be_future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Start_Date_cant_be_future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Hold_Start_Date__c  &lt;&gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Hold_Start_Date__c</errorDisplayField>
    <errorMessage>Hold Start Date must be today</errorMessage>
</ValidationRule>