force-app/main/default/objects/Property_Unit__c/validationRules/Reserved_End_Date_can_be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserved_End_Date_can_be_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Reserved_End_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Reserved_End_Date__c</errorDisplayField>
    <errorMessage>Reserved End Date always be a Future Date</errorMessage>
</ValidationRule>