force-app/main/default/objects/Property_Unit__c/validationRules/Reserved_Start_Date_Cant_be_future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserved_Start_Date_Cant_be_future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Reserved_Start_Date__c  &lt;&gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Reserved_Start_Date__c</errorDisplayField>
    <errorMessage>Reserved Start Date must be today</errorMessage>
</ValidationRule>