force-app/main/default/objects/Property_Unit__c/listViews/Aldar_Heaven_View.listView-meta.xml
<ListView>
    <fullName>Aldar_Heaven_View</fullName>
    <columns>NAME</columns>
    <columns>X4_DLD__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>View_Type__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Area_Sq_ft__c</columns>
    <columns>Broker__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>View_Type__c</field>
        <operation>equals</operation>
        <value>Aldar Heaven View</value>
    </filters>
    <label>Aldar Heaven View</label>
</ListView>