force-app/main/default/objects/Property_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyer__c</columns>
    <columns>Property__c</columns>
    <columns>Booking_Amount__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>Original_Price__c</columns>
    <columns>Total_Area_Sq_ft__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>View_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>