force-app/main/default/objects/Property_Unit__c/listViews/All_1BED_L.listView-meta.xml
<ListView>
    <fullName>All_1BED_L</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>1BED-L</value>
    </filters>
    <label>1BED-L</label>
</ListView>