force-app/main/default/objects/Property_Unit__c/listViews/All_Exe_Studio.listView-meta.xml
<ListView>
    <fullName>All_Exe_Studio</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>Exe Studio</value>
    </filters>
    <label>Exe Studio</label>
</ListView>