force-app/main/default/objects/Property_Unit__c/listViews/All_Studio.listView-meta.xml
<ListView>
    <fullName>All_Studio</fullName>
    <columns>NAME</columns>
    <columns>Unit_Type__c</columns>
    <columns>Original_Price__c</columns>
    <columns>Broker__c</columns>
    <columns>Buyer__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>Studio</value>
    </filters>
    <label>Studio</label>
</ListView>