force-app/main/default/objects/Property_Unit__c/listViews/Beach_Pool_View_WIDER.listView-meta.xml
<ListView>
    <fullName>Beach_Pool_View_WIDER</fullName>
    <columns>NAME</columns>
    <columns>X4_DLD__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Area_Sq_ft__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>View_Type__c</columns>
    <columns>Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>View_Type__c</field>
        <operation>equals</operation>
        <value>Beach Pool View WIDER</value>
    </filters>
    <label>Beach Pool View WIDER</label>
</ListView>